// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsePncUpdateDataSetXml converts XML to PncUpdateDataSet ignoring unexpected element 1`] = `
{
  "AnnotatedHearingOutcome": {
    "AnnotatedHearingOutcome": {
      "HearingOutcome": {
        "Case": {
          "CourtCaseReferenceNumber": "07/1577/020154M",
          "CourtReference": {
            "MagistratesCourtReference": "06AB1045501",
          },
          "ForceOwner": undefined,
          "HearingDefendant": {
            "Address": {
              "AddressLine1": "TDID10 Address Line 1",
              "AddressLine2": "TDID10 Address Line 2",
              "AddressLine3": "TDID10 Address Line 3",
              "AddressLine4": undefined,
              "AddressLine5": undefined,
            },
            "ArrestSummonsNumber": "0700000000000002497F",
            "BailConditions": [],
            "CourtPNCIdentifier": "2007/0000678T",
            "DefendantDetail": {
              "BirthDate": undefined,
              "Gender": 1,
              "GeneratedPNCFilename": "RUST/KEITH",
              "PersonName": {
                "FamilyName": "RUST",
                "GivenName": [
                  "KEITH",
                ],
                "Title": "Mr",
              },
            },
            "Offence": [
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-02-25T00:00:00.000Z,
                },
                "ActualOffenceWording": "On 25/02/2007 at IBM Farnborough  were in charge of a mechanically propelled vehicle, namely Mazda 323 Reg T130 BBK on a road namely Meudon Avenue Farnborough, whilst unfit to drive through drink. Contrary to section 4(2) of the Road Traffic Act 1988 and Schedule 2 to the Road Traffic Offenders Act 1988",
                "AddedByTheCourt": undefined,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": 2007-09-28T00:00:00.000Z,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 1,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "TH",
                      "FullCode": "TH68010",
                      "Qualifier": undefined,
                      "Reason": "010",
                      "Year": "68",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": "001",
                },
                "HomeOfficeClassification": "046/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": true,
                "OffenceCategory": "CE",
                "OffenceTitle": "Theft from shop - shoplifting",
                "RecordableOnPNCindicator": true,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 4530,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01HO01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "UB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 4004,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment with Judgement",
                    "ResultHalfLifeHours": 24,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [
                      {
                        "Code": "GT",
                      },
                    ],
                    "ResultVariableText": "Remanded on conditional bail until 01/04/2009 at 10am in courtroom 01 Kingston Magistrates Court",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": {
                      "urgency": 24,
                      "urgent": true,
                    },
                    "Verdict": "G",
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-06-14T00:00:00.000Z,
                },
                "ActualOffenceWording": "Thieving added in court",
                "AddedByTheCourt": true,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": undefined,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 2,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "MC",
                      "FullCode": "MC80932",
                      "Qualifier": undefined,
                      "Reason": "932",
                      "Year": "80",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": undefined,
                },
                "HomeOfficeClassification": "000/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": false,
                "OffenceCategory": "B7",
                "OffenceTitle": "Application for committal to prison for breach of family order",
                "RecordableOnPNCindicator": false,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 2059,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "03",
                      "OrganisationUnitCode": "B01HO03",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "CB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 2059,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment pre Judgement",
                    "ResultHalfLifeHours": undefined,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [],
                    "ResultVariableText": "Adjourned 4502",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": undefined,
                    "Verdict": undefined,
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
            ],
            "OrganisationName": undefined,
            "PNCCheckname": "RUST/KEITH",
            "PNCIdentifier": "2007/0000678T",
            "ReasonForBailConditions": undefined,
            "RemandStatus": "UB",
          },
          "ManualForceOwner": undefined,
          "PTIURN": "06AB1045501",
          "PenaltyNoticeCaseReferenceNumber": undefined,
          "PreChargeDecisionIndicator": false,
          "RecordableOnPNCindicator": true,
          "Urgent": undefined,
        },
        "Hearing": {
          "CourtHearingLocation": {
            "BottomLevelCode": "01",
            "OrganisationUnitCode": "B01AU01",
            "SecondLevelCode": "01",
            "ThirdLevelCode": "AU",
            "TopLevelCode": "B",
          },
          "CourtHouseCode": 2812,
          "CourtHouseName": "Magistrates' Courts London Barnet",
          "CourtType": "MCA",
          "DateOfHearing": 2007-09-28T00:00:00.000Z,
          "DefendantPresentAtHearing": "Y",
          "HearingDocumentationLanguage": "D",
          "HearingLanguage": "D",
          "SourceReference": {
            "DocumentName": "SPI KEITH RUST",
            "DocumentType": "SPI Case Result",
            "UniqueID": "01-04-200909:54ID:414d51204252375f514d202020202020d4db334901290920",
          },
          "TimeOfHearing": "10:00",
        },
      },
    },
    "Exceptions": [],
    "PncErrorMessage": undefined,
    "PncQuery": undefined,
    "PncQueryDate": undefined,
  },
  "PncOperations": [],
}
`;

exports[`parsePncUpdateDataSetXml converts XML to PncUpdateDataSet when an empty operation element exists 1`] = `
{
  "AnnotatedHearingOutcome": {
    "AnnotatedHearingOutcome": {
      "HearingOutcome": {
        "Case": {
          "CourtCaseReferenceNumber": "07/1577/020154M",
          "CourtReference": {
            "MagistratesCourtReference": "06AB1045501",
          },
          "ForceOwner": undefined,
          "HearingDefendant": {
            "Address": {
              "AddressLine1": "TDID10 Address Line 1",
              "AddressLine2": "TDID10 Address Line 2",
              "AddressLine3": "TDID10 Address Line 3",
              "AddressLine4": undefined,
              "AddressLine5": undefined,
            },
            "ArrestSummonsNumber": "0700000000000002497F",
            "BailConditions": [],
            "CourtPNCIdentifier": "2007/0000678T",
            "DefendantDetail": {
              "BirthDate": undefined,
              "Gender": 1,
              "GeneratedPNCFilename": "RUST/KEITH",
              "PersonName": {
                "FamilyName": "RUST",
                "GivenName": [
                  "KEITH",
                ],
                "Title": "Mr",
              },
            },
            "Offence": [
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-02-25T00:00:00.000Z,
                },
                "ActualOffenceWording": "On 25/02/2007 at IBM Farnborough  were in charge of a mechanically propelled vehicle, namely Mazda 323 Reg T130 BBK on a road namely Meudon Avenue Farnborough, whilst unfit to drive through drink. Contrary to section 4(2) of the Road Traffic Act 1988 and Schedule 2 to the Road Traffic Offenders Act 1988",
                "AddedByTheCourt": undefined,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": 2007-09-28T00:00:00.000Z,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 1,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "TH",
                      "FullCode": "TH68010",
                      "Qualifier": undefined,
                      "Reason": "010",
                      "Year": "68",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": "001",
                },
                "HomeOfficeClassification": "046/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": true,
                "OffenceCategory": "CE",
                "OffenceTitle": "Theft from shop - shoplifting",
                "RecordableOnPNCindicator": true,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 4530,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01HO01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "UB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 4004,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment with Judgement",
                    "ResultHalfLifeHours": 24,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [
                      {
                        "Code": "GT",
                      },
                    ],
                    "ResultVariableText": "Remanded on conditional bail until 01/04/2009 at 10am in courtroom 01 Kingston Magistrates Court",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": {
                      "urgency": 24,
                      "urgent": true,
                    },
                    "Verdict": "G",
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-06-14T00:00:00.000Z,
                },
                "ActualOffenceWording": "Thieving added in court",
                "AddedByTheCourt": true,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": undefined,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 2,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "MC",
                      "FullCode": "MC80932",
                      "Qualifier": undefined,
                      "Reason": "932",
                      "Year": "80",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": undefined,
                },
                "HomeOfficeClassification": "000/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": false,
                "OffenceCategory": "B7",
                "OffenceTitle": "Application for committal to prison for breach of family order",
                "RecordableOnPNCindicator": false,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 2059,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "03",
                      "OrganisationUnitCode": "B01HO03",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "CB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 2059,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment pre Judgement",
                    "ResultHalfLifeHours": undefined,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [],
                    "ResultVariableText": "Adjourned 4502",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": undefined,
                    "Verdict": undefined,
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
            ],
            "OrganisationName": undefined,
            "PNCCheckname": "RUST/KEITH",
            "PNCIdentifier": "2007/0000678T",
            "ReasonForBailConditions": undefined,
            "RemandStatus": "UB",
          },
          "ManualForceOwner": undefined,
          "PTIURN": "06AB1045501",
          "PenaltyNoticeCaseReferenceNumber": undefined,
          "PreChargeDecisionIndicator": false,
          "RecordableOnPNCindicator": true,
          "Urgent": undefined,
        },
        "Hearing": {
          "CourtHearingLocation": {
            "BottomLevelCode": "01",
            "OrganisationUnitCode": "B01AU01",
            "SecondLevelCode": "01",
            "ThirdLevelCode": "AU",
            "TopLevelCode": "B",
          },
          "CourtHouseCode": 2812,
          "CourtHouseName": "Magistrates' Courts London Barnet",
          "CourtType": "MCA",
          "DateOfHearing": 2007-09-28T00:00:00.000Z,
          "DefendantPresentAtHearing": "Y",
          "HearingDocumentationLanguage": "D",
          "HearingLanguage": "D",
          "SourceReference": {
            "DocumentName": "SPI KEITH RUST",
            "DocumentType": "SPI Case Result",
            "UniqueID": "01-04-200909:54ID:414d51204252375f514d202020202020d4db334901290920",
          },
          "TimeOfHearing": "10:00",
        },
      },
    },
    "Exceptions": [],
    "PncErrorMessage": undefined,
    "PncQuery": undefined,
    "PncQueryDate": undefined,
  },
  "PncOperations": [],
}
`;

exports[`parsePncUpdateDataSetXml converts XML to PncUpdateDataSet when no operations exist 1`] = `
{
  "AnnotatedHearingOutcome": {
    "AnnotatedHearingOutcome": {
      "HearingOutcome": {
        "Case": {
          "CourtCaseReferenceNumber": "07/1577/020154M",
          "CourtReference": {
            "MagistratesCourtReference": "06AB1045501",
          },
          "ForceOwner": undefined,
          "HearingDefendant": {
            "Address": {
              "AddressLine1": "TDID10 Address Line 1",
              "AddressLine2": "TDID10 Address Line 2",
              "AddressLine3": "TDID10 Address Line 3",
              "AddressLine4": undefined,
              "AddressLine5": undefined,
            },
            "ArrestSummonsNumber": "0700000000000002497F",
            "BailConditions": [],
            "CourtPNCIdentifier": "2007/0000678T",
            "DefendantDetail": {
              "BirthDate": undefined,
              "Gender": 1,
              "GeneratedPNCFilename": "RUST/KEITH",
              "PersonName": {
                "FamilyName": "RUST",
                "GivenName": [
                  "KEITH",
                ],
                "Title": "Mr",
              },
            },
            "Offence": [
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-02-25T00:00:00.000Z,
                },
                "ActualOffenceWording": "On 25/02/2007 at IBM Farnborough  were in charge of a mechanically propelled vehicle, namely Mazda 323 Reg T130 BBK on a road namely Meudon Avenue Farnborough, whilst unfit to drive through drink. Contrary to section 4(2) of the Road Traffic Act 1988 and Schedule 2 to the Road Traffic Offenders Act 1988",
                "AddedByTheCourt": undefined,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": 2007-09-28T00:00:00.000Z,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 1,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "TH",
                      "FullCode": "TH68010",
                      "Qualifier": undefined,
                      "Reason": "010",
                      "Year": "68",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": "001",
                },
                "HomeOfficeClassification": "046/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": true,
                "OffenceCategory": "CE",
                "OffenceTitle": "Theft from shop - shoplifting",
                "RecordableOnPNCindicator": true,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 4530,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01HO01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "UB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 4004,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment with Judgement",
                    "ResultHalfLifeHours": 24,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [
                      {
                        "Code": "GT",
                      },
                    ],
                    "ResultVariableText": "Remanded on conditional bail until 01/04/2009 at 10am in courtroom 01 Kingston Magistrates Court",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": {
                      "urgency": 24,
                      "urgent": true,
                    },
                    "Verdict": "G",
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-06-14T00:00:00.000Z,
                },
                "ActualOffenceWording": "Thieving added in court",
                "AddedByTheCourt": true,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": undefined,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 2,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "MC",
                      "FullCode": "MC80932",
                      "Qualifier": undefined,
                      "Reason": "932",
                      "Year": "80",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": undefined,
                },
                "HomeOfficeClassification": "000/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": false,
                "OffenceCategory": "B7",
                "OffenceTitle": "Application for committal to prison for breach of family order",
                "RecordableOnPNCindicator": false,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 2059,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "03",
                      "OrganisationUnitCode": "B01HO03",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "CB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 2059,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment pre Judgement",
                    "ResultHalfLifeHours": undefined,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [],
                    "ResultVariableText": "Adjourned 4502",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": undefined,
                    "Verdict": undefined,
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
            ],
            "OrganisationName": undefined,
            "PNCCheckname": "RUST/KEITH",
            "PNCIdentifier": "2007/0000678T",
            "ReasonForBailConditions": undefined,
            "RemandStatus": "UB",
          },
          "ManualForceOwner": undefined,
          "PTIURN": "06AB1045501",
          "PenaltyNoticeCaseReferenceNumber": undefined,
          "PreChargeDecisionIndicator": false,
          "RecordableOnPNCindicator": true,
          "Urgent": undefined,
        },
        "Hearing": {
          "CourtHearingLocation": {
            "BottomLevelCode": "01",
            "OrganisationUnitCode": "B01AU01",
            "SecondLevelCode": "01",
            "ThirdLevelCode": "AU",
            "TopLevelCode": "B",
          },
          "CourtHouseCode": 2812,
          "CourtHouseName": "Magistrates' Courts London Barnet",
          "CourtType": "MCA",
          "DateOfHearing": 2007-09-28T00:00:00.000Z,
          "DefendantPresentAtHearing": "Y",
          "HearingDocumentationLanguage": "D",
          "HearingLanguage": "D",
          "SourceReference": {
            "DocumentName": "SPI KEITH RUST",
            "DocumentType": "SPI Case Result",
            "UniqueID": "01-04-200909:54ID:414d51204252375f514d202020202020d4db334901290920",
          },
          "TimeOfHearing": "10:00",
        },
      },
    },
    "Exceptions": [],
    "PncErrorMessage": undefined,
    "PncQuery": undefined,
    "PncQueryDate": undefined,
  },
  "PncOperations": [],
}
`;

exports[`parsePncUpdateDataSetXml converts XML to PncUpdateDataSet when operations exist 1`] = `
{
  "AnnotatedHearingOutcome": {
    "AnnotatedHearingOutcome": {
      "HearingOutcome": {
        "Case": {
          "CourtCaseReferenceNumber": "07/1577/020154M",
          "CourtReference": {
            "MagistratesCourtReference": "06AB1045501",
          },
          "ForceOwner": undefined,
          "HearingDefendant": {
            "Address": {
              "AddressLine1": "TDID10 Address Line 1",
              "AddressLine2": "TDID10 Address Line 2",
              "AddressLine3": "TDID10 Address Line 3",
              "AddressLine4": undefined,
              "AddressLine5": undefined,
            },
            "ArrestSummonsNumber": "0700000000000002497F",
            "BailConditions": [],
            "CourtPNCIdentifier": "2007/0000678T",
            "DefendantDetail": {
              "BirthDate": undefined,
              "Gender": 1,
              "GeneratedPNCFilename": "RUST/KEITH",
              "PersonName": {
                "FamilyName": "RUST",
                "GivenName": [
                  "KEITH",
                ],
                "Title": "Mr",
              },
            },
            "Offence": [
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-02-25T00:00:00.000Z,
                },
                "ActualOffenceWording": "On 25/02/2007 at IBM Farnborough  were in charge of a mechanically propelled vehicle, namely Mazda 323 Reg T130 BBK on a road namely Meudon Avenue Farnborough, whilst unfit to drive through drink. Contrary to section 4(2) of the Road Traffic Act 1988 and Schedule 2 to the Road Traffic Offenders Act 1988",
                "AddedByTheCourt": undefined,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": 2007-09-28T00:00:00.000Z,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 1,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "TH",
                      "FullCode": "TH68010",
                      "Qualifier": undefined,
                      "Reason": "010",
                      "Year": "68",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": "001",
                },
                "HomeOfficeClassification": "046/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": true,
                "OffenceCategory": "CE",
                "OffenceTitle": "Theft from shop - shoplifting",
                "RecordableOnPNCindicator": true,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 4530,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01HO01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "UB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 4004,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment with Judgement",
                    "ResultHalfLifeHours": 24,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [
                      {
                        "Code": "GT",
                      },
                    ],
                    "ResultVariableText": "Remanded on conditional bail until 01/04/2009 at 10am in courtroom 01 Kingston Magistrates Court",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": {
                      "urgency": 24,
                      "urgent": true,
                    },
                    "Verdict": "G",
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
              {
                "ActualOffenceDateCode": "1",
                "ActualOffenceEndDate": undefined,
                "ActualOffenceStartDate": {
                  "StartDate": 2007-06-14T00:00:00.000Z,
                },
                "ActualOffenceWording": "Thieving added in court",
                "AddedByTheCourt": true,
                "AlcoholLevel": undefined,
                "ArrestDate": 2007-07-11T00:00:00.000Z,
                "ChargeDate": 2007-07-11T00:00:00.000Z,
                "CommittedOnBail": "D",
                "ConvictionDate": undefined,
                "CourtCaseReferenceNumber": undefined,
                "CourtOffenceSequenceNumber": 2,
                "CriminalProsecutionReference": {
                  "DefendantOrOffender": {
                    "CheckDigit": "F",
                    "DefendantOrOffenderSequenceNumber": "00000002497",
                    "OrganisationUnitIdentifierCode": {
                      "BottomLevelCode": "00",
                      "OrganisationUnitCode": "000000",
                      "SecondLevelCode": "00",
                      "ThirdLevelCode": "00",
                      "TopLevelCode": undefined,
                    },
                    "Year": "07",
                  },
                  "OffenceReason": {
                    "OffenceCode": {
                      "ActOrSource": "MC",
                      "FullCode": "MC80932",
                      "Qualifier": undefined,
                      "Reason": "932",
                      "Year": "80",
                      "__type": "NonMatchingOffenceCode",
                    },
                    "__type": "NationalOffenceReason",
                  },
                  "OffenceReasonSequence": undefined,
                },
                "HomeOfficeClassification": "000/00",
                "LocationOfOffence": "10 Meudon Avenue Farnborough",
                "ManualCourtCaseReference": undefined,
                "ManualSequenceNumber": undefined,
                "NotifiableToHOindicator": false,
                "OffenceCategory": "B7",
                "OffenceTitle": "Application for committal to prison for breach of family order",
                "RecordableOnPNCindicator": false,
                "Result": [
                  {
                    "AmountSpecifiedInResult": undefined,
                    "BailCondition": [],
                    "CJSresultCode": 2059,
                    "ConvictingCourt": undefined,
                    "CourtType": "MCA",
                    "DateSpecifiedInResult": undefined,
                    "Duration": [],
                    "ModeOfTrialReason": "NOMOT",
                    "NextCourtType": "MCA",
                    "NextHearingDate": 2008-03-06T00:00:00.000Z,
                    "NextHearingTime": "14:00",
                    "NextResultSourceOrganisation": {
                      "BottomLevelCode": "03",
                      "OrganisationUnitCode": "B01HO03",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "HO",
                      "TopLevelCode": "B",
                    },
                    "NumberOfOffencesTIC": undefined,
                    "NumberSpecifiedInResult": undefined,
                    "OffenceRemandStatus": "CB",
                    "PNCAdjudicationExists": false,
                    "PNCDisposalType": 2059,
                    "PleaStatus": "NG",
                    "ReasonForOffenceBailConditions": undefined,
                    "ResultApplicableQualifierCode": [],
                    "ResultClass": "Adjournment pre Judgement",
                    "ResultHalfLifeHours": undefined,
                    "ResultHearingDate": 2007-09-28T00:00:00.000Z,
                    "ResultHearingType": "OTHER",
                    "ResultQualifierVariable": [],
                    "ResultVariableText": "Adjourned 4502",
                    "SourceOrganisation": {
                      "BottomLevelCode": "01",
                      "OrganisationUnitCode": "B01AU01",
                      "SecondLevelCode": "01",
                      "ThirdLevelCode": "AU",
                      "TopLevelCode": "B",
                    },
                    "Urgent": undefined,
                    "Verdict": undefined,
                    "WarrantIssueDate": undefined,
                  },
                ],
              },
            ],
            "OrganisationName": undefined,
            "PNCCheckname": "RUST/KEITH",
            "PNCIdentifier": "2007/0000678T",
            "ReasonForBailConditions": undefined,
            "RemandStatus": "UB",
          },
          "ManualForceOwner": undefined,
          "PTIURN": "06AB1045501",
          "PenaltyNoticeCaseReferenceNumber": undefined,
          "PreChargeDecisionIndicator": false,
          "RecordableOnPNCindicator": true,
          "Urgent": undefined,
        },
        "Hearing": {
          "CourtHearingLocation": {
            "BottomLevelCode": "01",
            "OrganisationUnitCode": "B01AU01",
            "SecondLevelCode": "01",
            "ThirdLevelCode": "AU",
            "TopLevelCode": "B",
          },
          "CourtHouseCode": 2812,
          "CourtHouseName": "Magistrates' Courts London Barnet",
          "CourtType": "MCA",
          "DateOfHearing": 2007-09-28T00:00:00.000Z,
          "DefendantPresentAtHearing": "Y",
          "HearingDocumentationLanguage": "D",
          "HearingLanguage": "D",
          "SourceReference": {
            "DocumentName": "SPI KEITH RUST",
            "DocumentType": "SPI Case Result",
            "UniqueID": "01-04-200909:54ID:414d51204252375f514d202020202020d4db334901290920",
          },
          "TimeOfHearing": "10:00",
        },
      },
    },
    "Exceptions": [],
    "PncErrorMessage": undefined,
    "PncQuery": undefined,
    "PncQueryDate": undefined,
  },
  "PncOperations": [
    {
      "code": "DISARR",
      "status": "Completed",
    },
    {
      "code": "DISARR",
      "data": {
        "courtCaseReference": "07/1577/020154M",
      },
      "status": "Completed",
    },
    {
      "code": "SENDEF",
      "data": {
        "courtCaseReference": "07/1577/020154M",
      },
      "status": "Completed",
    },
    {
      "code": "SENDEF",
      "status": "Completed",
    },
    {
      "code": "NEWREM",
      "data": {
        "nextHearingDate": 2008-03-06T00:00:00.000Z,
        "nextHearingLocation": {
          "BottomLevelCode": "01",
          "OrganisationUnitCode": "B01HO01",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "HO",
          "TopLevelCode": "B",
        },
      },
      "status": "Completed",
    },
    {
      "code": "NEWREM",
      "data": {
        "nextHearingDate": 2008-03-06T00:00:00.000Z,
        "nextHearingLocation": {
          "BottomLevelCode": "03",
          "OrganisationUnitCode": "B01HO03",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "HO",
          "TopLevelCode": "B",
        },
      },
      "status": "NotAttempted",
    },
    {
      "code": "NEWREM",
      "status": "Failed",
    },
  ],
}
`;
